# scraping-by

./: .gitignore  Procfile  README.md  example.env  pyproject.toml  requirements.txt
src/: manage.py
src/scraper/: admin.py  models.py  operations.py  scraper.py
src/scraper/management/commands/: post_to_slack.py  scrape.py
src/scraper/migrations/: 0001_initial.py  0002_auto_20210529_1608.py
src/scraping_by/: asgi.py  settings.py  urls.py  wsgi.py
