[tool.poetry]
name = "scraping-by"
version = "0.1.0"
description = ""
authors = ["Caitlin <10053862+con-cat@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
envparse = "^0.2.0"
requests = "^2.25.1"
django-on-heroku = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.5b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
